kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: frontend-$PAPERHIVE_BRANCH-service
  labels:
    name: frontend
    branch: $PAPERHIVE_BRANCH
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    name: frontend
    branch: $PAPERHIVE_BRANCH
